modified all files

--- a/header_18/index.html
+++ b/header_18/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="header-cta-btn">
-                    <button class="mr-4">Get Started</button>
+                    <button class="get-started mr-4">Get Started</button>
                     <button class="learn-more">Learn More</button>
                 </div>
             </div>
