--- a/header_14/index.html
+++ b/header_14/index.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
     <div class="hero-header">
-        <div class="header-menu pt-5">
+        <div class="header-menu">
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="#">Startup 3</a>
